fix color contrast issues

--- a/_sass/_theme-switch.scss
+++ b/_sass/_theme-switch.scss
@@ -12,7 +12,7 @@ label.theme-switch {
   }
 
   &:active {
-    background: var(--color-primary);
+    background: var(--color-primary-variant);
   }
 
   svg {
