--- a/_sass/base/_colors.scss
+++ b/_sass/base/_colors.scss
@@ -4,15 +4,15 @@
 
 :root {
   $color-bg: #fbfbfb;
-  $color-primary: #3476e2;
+  $color-primary: #0d50bb;
+  $color-primary-light: #347cf0;
 
   --color-bg: #{$color-bg};
   --color-bg-secondary: #{darken($color-bg, 5%)};
   --color-primary: #{$color-primary};
+  --color-primary-variant: #{$color-primary-light};
   --color-primary-accent: #{transparentize($color-primary, 0.7)};
   --color-text: #283149;
-  --active-brightness: 1.2;
-  --hover-brightness: 0.7;
 
   --color-code-red: #ca1243;
   --color-code-blue: #4078f2;
@@ -25,15 +25,15 @@
 
 :root[data-theme="dark"] {
   $color-bg: #283149;
-  $color-primary: #8db6f7;
+  $color-primary: #9ec1f7;
+  $color-primary-dark: #659df2;
 
   --color-bg: #{$color-bg};
   --color-bg-secondary: #{lighten($color-bg, 5%)};
   --color-primary: #{$color-primary};
+  --color-primary-variant: #{$color-primary-dark};
   --color-primary-accent: #{transparentize($color-primary, 0.7)};
   --color-text: #fbfbfb;
-  --active-brightness: 0.8;
-  --hover-brightness: 1.2;
 
   --color-code-red: #ff5370;
   --color-code-blue: #82aaff;
@@ -64,11 +64,11 @@
   background: var(--color-primary-accent);
 
   &:hover {
-    background: var(--color-primary);
+    background: var(--color-primary-variant);
   }
 
   &:active {
-    background: var(--color-primary-accent);
+    background: var(--color-primary);
   }
 }
 
@@ -86,11 +86,11 @@ a {
   }
 
   &:hover {
-    filter: brightness(var(--hover-brightness));
+    color: var(--color-primary-variant);
   }
 
   &:active {
-    filter: brightness(var(--active-brightness));
+    color: var(--color-primary-accent);
   }
 
   &:focus {
